--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>雁讯(Matrix网络) - 一个安心的群聊环境</title>
+    <title>千里传音 - 一个安心的群聊环境</title>
     <link rel="shortcut icon" type="image/ico" href="./res/favicon.ico">
     <link rel="stylesheet" href="./res/bootstrap.min.css">
     <link rel="stylesheet" href="./res/animate.css">
@@ -64,7 +64,8 @@
 
                     <div class="space-20"></div>
                     <div class="desc wow fadeInUp" data-wow-delay="0.5s">
-                        <p>言论自由和知情权，是天赋人权。网络审查是在囚禁中国人。雁讯（yanxun.org）项目的推出是给国人提供一个避免审查和监控、自由获取真实信息的交流平台。</p>
+                        <p>言论自由和知情权，是天赋人权。网络审查是在囚禁中国人。本项目的推出是给国人提供一个避免审查和监控、自由获取真实信息的交流平台。</p>
+                        <p>千里传音fork与Signal app最新代码，仅仅修改了注册流程、将手机号替换成自定义id，让用户无需手机号就能注册，杜绝所有安全隐患。</p>
                     </div>
                     <div class="space-20"></div>
                     <div class="wow fadeInUp" data-wow-delay="0.2s">
