--- a/index.html
+++ b/index.html
@@ -65,168 +65,42 @@
                     <div class="space-20"></div>
                     <div class="desc wow fadeInUp" data-wow-delay="0.5s">
                         <p>言论自由和知情权，是天赋人权。网络审查是在囚禁中国人。本项目的推出是给国人提供一个避免审查和监控、自由获取真实信息的交流平台。</p>
-                        <p>千里传音fork与Signal app最新代码，仅仅修改了注册流程、将手机号替换成自定义id，让用户无需手机号就能注册，杜绝所有安全隐患。</p>
+                        <p>千里传音fork自Signal app最新代码，仅修改了注册流程、将手机号替换成自定义id，让用户无需手机号就能注册，杜绝所有安全隐患。</p>
                     </div>
                     <div class="space-20"></div>
                     <div class="wow fadeInUp" data-wow-delay="0.2s">
                         <div class="button-line">
-                            <div class="button-line-head">Web：</div>
-                            <a id="back_to_element_button" href="#" class="bttn-white">继续使用浏览器</a>
+                            <div class="button-line-head">安卓：</div>
+                            <div class="row" style="margin-left: 0px;">
+                                <div class="dropdown">
+                                    <button type="button" class="btn btn-outline-primary dropdown-toggle " data-toggle="dropdown" aria-expanded="false">点击下载</button>
+                                    <div class="dropdown-menu">
+                                        <a href="/download/file/vector-fdroid-kotlinCrypto-arm64-v8a-release.apk" target="_blank" class="dropdown-item">arm64-v8（推荐）</a>
+                                        <div class="dropdown-divider"></div>
+                                        <a href="/download/file/vector-fdroid-kotlinCrypto-armeabi-v7a-release.apk" target="_blank" class="dropdown-item">armeabi-v7a</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="space-20"></div>
                         <div class="button-line" style="border-style: none">
-                            <div class="button-line-head">客户端：</div>
-                            <a href="#download" class="bttn-white">下载客户端 <span class="badge badge-primary" style="background-color: #768ede;">&dArr;</span></a>
+                            <div class="button-line-head">iOS：</div>
+                            <a href="#" class="bttn-white">开发中，敬请期待 <span class="badge badge-primary" style="background-color: #768ede;">&dArr;</span></a>
+                        </div>
+                        <div class="space-20"></div>
+                        <div class="button-line" style="border-style: none">
+                            <div class="button-line-head">Windows：</div>
+                            <a href="#" class="bttn-white">开发中，敬请期待 <span class="badge badge-primary" style="background-color: #768ede;">&dArr;</span></a>
+                        </div>
+                        <div class="space-20"></div>
+                        <div class="button-line" style="border-style: none">
+                            <div class="button-line-head">Mac：</div>
+                            <a href="#" class="bttn-white">开发中，敬请期待 <span class="badge badge-primary" style="background-color: #768ede;">&dArr;</span></a>
                         </div>
                     </div>
                 </div>
             </div>
         </header>
-
-        <section class="section-padding" id="download" style="padding:30px;">
-            <div class="wow fadeInUp" data-wow-delay="0.2s">
-                <div class="page-title text-center">
-                    <img src="./res/logo.png" style="max-width: 45px;">
-                    <div class="space-20"></div>
-                    <h5 class="title">客户端下载</h5>
-                </div>
-                <div class="space-20"></div>
-                <div class="button-line">
-                    <table>
-                        <tr>
-                            <td>
-                                <div class="button-line-head">安卓：</div>
-                            </td>
-                            <td>
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <div class="row" style="margin-left: 0px;">
-                                                <div class="dropdown">
-                                                    <button type="button" class="btn btn-outline-primary dropdown-toggle " data-toggle="dropdown" aria-expanded="false">点击下载</button>
-                                                    <div class="dropdown-menu">
-                                                        <a href="/download/file/vector-fdroid-kotlinCrypto-arm64-v8a-release.apk" target="_blank" class="dropdown-item">arm64-v8（推荐）</a>
-                                                        <div class="dropdown-divider"></div>
-                                                        <a href="/download/file/vector-fdroid-kotlinCrypto-armeabi-v7a-release.apk" target="_blank" class="dropdown-item">armeabi-v7a</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="space-20"></div>
-                <div class="button-line">
-                    <table>
-                        <tr>
-                            <td>
-                                <div class="button-line-head">苹果：</div>
-                            </td>
-                            <td>
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <a class="btn btn-outline-primary" href="https://apps.apple.com/app/vector/id1083446067" role="button">App Store下载</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <div class="space-10"></div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <a class="btn btn-outline-primary" href="#guideapple" role="button">安装教程</a>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="space-20"></div>
-                <div class="button-line">
-                    <div class="button-line-head">Mac：</div>
-                    &nbsp;
-                    <a class="btn btn-outline-primary" href="/download/file/Element.dmg" role="button">点击下载</a>
-                </div>
-                <div class="space-20"></div>
-                <div class="button-line">
-                    <div class="button-line-head">Windows：</div>
-                    &nbsp;
-                    <div class="dropdown">
-                        <button type="button" class="btn btn-outline-primary dropdown-toggle " data-toggle="dropdown" aria-expanded="false">点击下载</button>
-                        <div class="dropdown-menu">
-                            <a href="/download/file/Element_Setup_64.exe" target="_blank" class="dropdown-item">Windows (64 bit) （推荐）</a>
-                            <div class="dropdown-divider"></div>
-                            <a href="/download/file/Element_Setup_32.exe" target="_blank" class="dropdown-item">Windows (32 bit)</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="space-20"></div>
-                <div class="button-line" style="border-style: none;">
-                    <div class="button-line-head">Linux：</div>
-                    &nbsp;
-                    <a class="btn btn-outline-primary" href="#linux" role="button">Linux安装</a>
-                </div>
-            </div>
-        </section>
-
-        <section class="section-padding" id="guideapple" style="padding:30px;">
-            <div class="page-title text-center">
-                <img src="./res/logo.png" style="max-width: 45px;">
-                <div class="space-20"></div>
-                <h5 class="title">苹果手机安装教程</h5>
-            </div>
-            <div class="space-20"></div>
-            <p>如何下载安装：（言论自由的软件在中国区都被禁用了，需要把Apple ID的地区切换到海外，才能搜索到）</p>
-            <div class="embed-responsive embed-responsive-1by1" style="max-width: 500px;">
-                <video id="my-video" class="video-js embed-responsive-item" controls preload="metadata" width="200" height="800">
-                    <source src="/download/file/element-apple-install.mp4" type="video/mp4" />
-                    <p class="vjs-no-js"> 请启用 JavaScript 才能观看 </p>
-                </video>
-            </div>
-            <br /><br />
-            <p>如何设置安全短语：</p>
-            <div class="embed-responsive embed-responsive-1by1" style="max-width: 500px;">
-                <video id="my-video" class="video-js embed-responsive-item" controls preload="metadata">
-                    <source src="/download/file/element-apple-set-key.mp4" type="video/mp4" />
-                    <p class="vjs-no-js"> 请启用 JavaScript 才能观看 </p>
-                </video>
-            </div>
-        </section>
-
-        <section class="section-padding" id="linux">
-            <div class="col-xs-12 col-md-10 col-md-offset-1">
-                <div class="page-title text-center">
-                    <img src="./res/logo.png" style="max-width: 45px;">
-
-                    <div class="space-20"></div>
-                    <h5 class="title">Linux安装</h5>
-
-                    <div class="space-20"></div>
-
-                    <div class="text--code">
-                        <h4 class="blue-color">Debian / Ubuntu x86_64 / aarch64</h4>
-                        <div class="space-20"></div>
-                        sudo apt install -y wget apt-transport-https
-                        <br>&zwj;
-                        <br>
-                        sudo wget -O /usr/share/keyrings/element-io-archive-keyring.gpg https://packages.element.io/debian/element-io-archive-keyring.gpg
-                        <br>&zwj;
-                        <br>
-                        echo "deb [signed-by=/usr/share/keyrings/element-io-archive-keyring.gpg] https://packages.element.io/debian/ default main" | sudo tee /etc/apt/sources.list.d/element-io.list
-                        <br><br>
-                        sudo apt update
-                        <br><br>
-                        sudo apt install element-desktop
-                    </div>
-                </div>
-            </div>
-        </section>
     </div>
     <script src="./res/jquery-1.12.4.min.js"></script>
     <script src="./res/bootstrap.bundle.min.js"></script>
