--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <div class="button-line-head">安卓：</div>
                             <div class="row" style="margin-left: 0px;">
                                 <div class="dropdown">
-                                    <button type="button" class="btn btn-light dropdown-toggle " data-toggle="dropdown" aria-expanded="false">点击下载</button>
+                                    <button type="button" class="btn btn-light dropdown-toggle " data-toggle="dropdown" aria-expanded="false"><div style="color: blue;">点击下载</div></button>
                                     <div class="dropdown-menu">
                                         <a href="/download/file/vector-fdroid-kotlinCrypto-arm64-v8a-release.apk" target="_blank" class="dropdown-item">arm64-v8（推荐）</a>
                                         <div class="dropdown-divider"></div>
@@ -85,17 +85,17 @@
                         <div class="space-20"></div>
                         <div class="button-line" style="border-style: none">
                             <div class="button-line-head">iOS：</div>
-                            <div class="button-line-head">开发中，敬请期待</div>
+                            <div style="color: white;">开发中，敬请期待</div>
                         </div>
                         <div class="space-20"></div>
                         <div class="button-line" style="border-style: none">
                             <div class="button-line-head">Windows：</div>
-                            <div class="button-line-head">开发中，敬请期待</div>
+                            <div style="color: white;">开发中，敬请期待</div>
                         </div>
                         <div class="space-20"></div>
                         <div class="button-line" style="border-style: none">
                             <div class="button-line-head">Mac：</div>
-                            <div class="button-line-head">开发中，敬请期待</div>
+                            <div style="color: white;">开发中，敬请期待</div>
                         </div>
                     </div>
                 </div>
