--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
                             </div>
                         </div>
                         <div class="space-20"></div>
-                        <div class="button-line" style="border-style: none">
+                        <div class="button-line">
                             <div class="button-line-head">iOS：</div>
                             <div style="color: white;">开发中，敬请期待</div>
                         </div>
                         <div class="space-20"></div>
-                        <div class="button-line" style="border-style: none">
+                        <div class="button-line" >
                             <div class="button-line-head">Windows：</div>
                             <div style="color: white;">开发中，敬请期待</div>
                         </div>
