--- a/index.html
+++ b/index.html
@@ -36,16 +36,13 @@
         </div>
         <nav id="#navbar-example" class="navbar navbar-expand-sm navbar-dark bg-primary mainmenu-area fixed-top">
             <a class="navbar-brand" href="#">
-                <img src="./res/logo-white.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                雁讯
+                千里传音
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="nav navbar-nav navbar-collapse collapse in" id="navbarNav" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav">
                 <a class="nav-link active" href="#home_page">首页 <span class="sr-only">(current)</span></a>
-                <a class="nav-link" href="#download">客户端下载</a>
-                <a class="nav-link" href="#guideapple">苹果安装教程</a>
                 </ul>
             </div>
         </nav>
@@ -55,7 +52,7 @@
                 <div class="col-xs-12 hidden-sm col-md-5">
                     <div class="space-20"></div>
                     <figure class="mobile-image wow fadeInUp" data-wow-delay="0.2s">
-                        <img src="./res/pic_home.png" alt="">
+                        <img src="./res/gc.webp" alt="">
                     </figure>
                 </div>
                 <div class="col-xs-12 col-md-7">
