--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="col-xs-12 hidden-sm col-md-5">
                     <div class="space-20"></div>
                     <figure class="mobile-image wow fadeInUp" data-wow-delay="0.2s">
-                        <img src="./res/gc.webp" alt="">
+                        <img src="./res/home_pic.webp" alt="">
                     </figure>
                 </div>
                 <div class="col-xs-12 col-md-7">
