--- a/index.html
+++ b/index.html
@@ -68,16 +68,7 @@
                     <div class="wow fadeInUp" data-wow-delay="0.2s">
                         <div class="button-line">
                             <div class="button-line-head">安卓：</div>
-                            <div class="row" style="margin-left: 0px;">
-                                <div class="dropdown">
-                                    <button type="button" class="btn btn-light dropdown-toggle " data-toggle="dropdown" aria-expanded="false" style="color: blue;">点击下载</button>
-                                    <div class="dropdown-menu">
-                                        <a href="/download/file/vector-fdroid-kotlinCrypto-arm64-v8a-release.apk" target="_blank" class="dropdown-item">arm64-v8（推荐）</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a href="/download/file/vector-fdroid-kotlinCrypto-armeabi-v7a-release.apk" target="_blank" class="dropdown-item">armeabi-v7a</a>
-                                    </div>
-                                </div>
-                            </div>
+                            <a href="/file/qianli-chat-website-universal-release.apk" target="_blank" class="btn btn-light" style="color: blue;">点击下载</a>
                         </div>
                         <div class="space-20"></div>
                         <div class="button-line">
