--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="space-20"></div>
                         <div class="button-line" style="border-style: none">
                             <div class="button-line-head">Mac：</div>
-                            <div style="color: white;">开发中，敬请期待</div>
+                            <a href="/file/qianli-desktop-mac-universal-6.37.0.dmg" target="_blank" class="btn btn-light" style="color: blue;">点击下载</a>
                         </div>
                     </div>
                 </div>
