--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="desc wow fadeInUp" data-wow-delay="0.5s">
                         <p>言论自由和知情权，是天赋人权。网络审查是在囚禁中国人。本项目的推出是给国人提供一个避免审查和监控、自由获取真实信息的交流平台。</p>
                         <p>千里传音fork自Signal app最新代码，仅修改了注册流程、将手机号替换成自定义id，让用户无需手机号就能注册，杜绝所有安全隐患。</p>
-                        <p>项目所有的源代码都开源在<a href="https://github.com/qianlichat/" style="color: white;text-decoration:underline;">Github</a>上面，任何人都可以自由检查代码安全性、或自行打包编译。同时也希望能看到更多的服务器被部署出来对抗防火墙，遍地开花。</p>
+                        <p>项目所有的源代码都开源在<a href="https://github.com/qianlichat/" style="color: white;text-decoration:underline;">[Github]</a>上面，任何人都可以自由检查代码安全性、或自行打包编译。同时也希望能看到更多的服务器被部署出来对抗防火墙，遍地开花。</p>
                     </div>
                     <div class="space-20"></div>
                     <div class="wow fadeInUp" data-wow-delay="0.2s">
