--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="wow fadeInUp" data-wow-delay="0.2s">
                         <div class="button-line">
                             <div class="button-line-head">安卓：</div>
-                            <a href="/file/qianli-chat-website-universal-release.apk" target="_blank" class="btn btn-light" style="color: blue;">点击下载</a>
+                            <a href="/file/qianli-android-universal-release-6.39.0.apk" target="_blank" class="btn btn-light" style="color: blue;">点击下载</a>
                         </div>
                         <div class="space-20"></div>
                         <div class="button-line">
