--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <div class="space-20"></div>
                         <div class="button-line" >
                             <div class="button-line-head">Windows：</div>
-                            <div style="color: white;">开发中，敬请期待</div>
+                            <a href="/file/qianli-desktop-win-6.37.0.exe" target="_blank" class="btn btn-light" style="color: blue;">点击下载</a>
                         </div>
                         <div class="space-20"></div>
                         <div class="button-line" style="border-style: none">
