--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
                 </div>
                 <div class="col-xs-12 col-md-7">
                     <div class="space-20"></div>
-                    <h1 class="wow fadeInUp" data-wow-delay="0.3s">别让中国 GFW 蒙蔽您的双眼</h1>
+                    <h1 class="wow fadeInUp" data-wow-delay="0.3s">千里传音 穿越封锁</h1>
 
                     <div class="space-20"></div>
                     <div class="desc wow fadeInUp" data-wow-delay="0.5s">
-                        <p>言论自由和知情权，是天赋人权。网络审查是在囚禁中国人。本项目的推出是给国人提供一个避免审查和监控、自由获取真实信息的交流平台。</p>
-                        <p>千里传音fork自Signal app最新代码，仅修改了注册流程、将手机号替换成自定义id，让用户无需手机号就能注册，杜绝所有安全隐患。</p>
+                        <p>现在是信息时代，网络封锁剥夺人的言论自由和知情权，危及人的安全， 千里传音项目的推出是给网友提供一个不受干扰和监控，自由获取真实信息的即时通讯软体。</p>
+                        <p>千里传音 fork 自目前国际公认在隐私和安全方面顶尖的加密通信软体 Signal Messenger，仅修改了注册流程, 将手机号替换成自定义账号，让用户无需手机号就能注册，杜绝所有安全隐患。项目所有的源代码都公布在[Github]上面，任何人都可以检查代码安全性。</p>
                         <p>项目所有的源代码都开源在<a href="https://github.com/qianlichat/" style="color: white;text-decoration:underline;">[Github]</a>上面，任何人都可以自由检查代码安全性、或自行打包编译。</p>
+                        <p>与 Signal 或 Telegram 相比，千里传音因为无需电话号码注册，完全匿名，更能够保护用户的隐私和安全。千里传音项目的志愿者可以協助你安裝，提供代理服务，让你避开监控放心的与朋友聊天，畅通无阻传输信息，也不会有封号问题。使用千里传音免费，也不需要 VPN。</p>
                     </div>
                     <div class="space-20"></div>
                     <div class="wow fadeInUp" data-wow-delay="0.2s">
@@ -78,12 +79,12 @@
                         </div>
                         <div class="space-20"></div>
                         <div class="button-line" >
-                            <div class="button-line-head">Windows：</div>
+                            <div class="button-line-head">Windows：（不支持代理）</div>
                             <a href="/file/qianli-desktop-win-6.37.0.exe" target="_blank" class="btn btn-light" style="color: blue;">点击下载</a>
                         </div>
                         <div class="space-20"></div>
                         <div class="button-line" style="border-style: none">
-                            <div class="button-line-head">Mac：</div>
+                            <div class="button-line-head">Mac：（不支持代理）</div>
                             <a href="/file/qianli-desktop-mac-universal-6.37.0.dmg" target="_blank" class="btn btn-light" style="color: blue;">点击下载</a>
                         </div>
                     </div>
