--- a/index.html
+++ b/index.html
@@ -36,20 +36,18 @@
         </div>
         <nav id="#navbar-example" class="navbar navbar-expand-sm navbar-dark bg-primary mainmenu-area fixed-top">
             <a class="navbar-brand" href="#">
-                千里传音
+                <img src="res/qianli-logo.png" style="width: 33px;height: 33px; margin-right: 10px;"/>千里传音
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="nav navbar-nav navbar-collapse collapse in" id="navbarNav" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav">
-                <a class="nav-link active" href="#home_page">首页 <span class="sr-only">(current)</span></a>
-                </ul>
             </div>
         </nav>
 
         <header class="home-area overlay mainmenu-area" id="home_page" style="padding: 0 15px;">
             <div class="row" style=" padding: 80px 20px 0 20px; ">
-                <div class="col-xs-12 hidden-sm col-md-5">
+                <div class="col-xs-12 hidden-sm col-md-5" style="max-width: 30%;">
                     <div class="space-20"></div>
                     <figure class="mobile-image wow fadeInUp" data-wow-delay="0.2s">
                         <img src="./res/home_pic.webp" alt="">
@@ -57,13 +55,14 @@
                 </div>
                 <div class="col-xs-12 col-md-7">
                     <div class="space-20"></div>
+                    <img src="res/qianli-logo.png" style="width: 200px;margin-left: 150px;"/>
+                    <div class="space-20"></div>
                     <h1 class="wow fadeInUp" data-wow-delay="0.3s">千里传音 穿越封锁</h1>
 
                     <div class="space-20"></div>
                     <div class="desc wow fadeInUp" data-wow-delay="0.5s">
                         <p>现在是信息时代，网络封锁剥夺人的言论自由和知情权，危及人的安全， 千里传音项目的推出是给网友提供一个不受干扰和监控，自由获取真实信息的即时通讯软体。</p>
                         <p>千里传音 fork 自目前国际公认在隐私和安全方面顶尖的加密通信软体 Signal Messenger，仅修改了注册流程, 将手机号替换成自定义账号，让用户无需手机号就能注册，杜绝所有安全隐患。项目所有的源代码都公布在[Github]上面，任何人都可以检查代码安全性。</p>
-                        <p>项目所有的源代码都开源在<a href="https://github.com/qianlichat/" style="color: white;text-decoration:underline;">[Github]</a>上面，任何人都可以自由检查代码安全性、或自行打包编译。</p>
                         <p>与 Signal 或 Telegram 相比，千里传音因为无需电话号码注册，完全匿名，更能够保护用户的隐私和安全。千里传音项目的志愿者可以協助你安裝，提供代理服务，让你避开监控放心的与朋友聊天，畅通无阻传输信息，也不会有封号问题。使用千里传音免费，也不需要 VPN。</p>
                     </div>
                     <div class="space-20"></div>
@@ -79,13 +78,15 @@
                         </div>
                         <div class="space-20"></div>
                         <div class="button-line" >
-                            <div class="button-line-head">Windows：（不支持代理）</div>
+                            <div class="button-line-head">Windows：</div>
                             <a href="/file/qianli-desktop-win-6.37.0.exe" target="_blank" class="btn btn-light" style="color: blue;">点击下载</a>
+                            <div class="button-line-head" style="width: 100px;">&nbsp;(不支持代理)</div>
                         </div>
                         <div class="space-20"></div>
                         <div class="button-line" style="border-style: none">
-                            <div class="button-line-head">Mac：（不支持代理）</div>
+                            <div class="button-line-head">Mac：</div>
                             <a href="/file/qianli-desktop-mac-universal-6.37.0.dmg" target="_blank" class="btn btn-light" style="color: blue;">点击下载</a>
+                            <div class="button-line-head" style="width: 100px;">&nbsp;(不支持代理)</div>
                         </div>
                     </div>
                 </div>
