--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="nav navbar-nav navbar-collapse collapse in" id="navbarNav" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav">
+                <a class="nav-link" href="#home_page">首页</a>
+                <a class="nav-link" href="#aggrement">用户协议</a>
             </div>
         </nav>
 
@@ -55,10 +57,11 @@
                 </div>
                 <div class="col-xs-12 col-md-7">
                     <div class="space-20"></div>
-                    <img src="res/qianli-logo.png" style="width: 200px;margin-left: 150px;"/>
-                    <div class="space-20"></div>
-                    <h1 class="wow fadeInUp" data-wow-delay="0.3s">千里传音 穿越封锁</h1>
-
+                    <div style="text-align: center;">
+                        <img src="res/qianli-logo.png" style="width: 200px;"/>
+                        <div class="space-20"></div>
+                        <h2 class="wow fadeInUp" data-wow-delay="0.3s" style="font-family: LiSu, cursive;">千里传音 穿越封锁</h2>
+                    </div>
                     <div class="space-20"></div>
                     <div class="desc wow fadeInUp" data-wow-delay="0.5s">
                         <p>现在是信息时代，网络封锁剥夺人的言论自由和知情权，危及人的安全， 千里传音项目的推出是给网友提供一个不受干扰和监控，自由获取真实信息的即时通讯软体。</p>
@@ -66,7 +69,7 @@
                         <p>与 Signal 或 Telegram 相比，千里传音因为无需电话号码注册，完全匿名，更能够保护用户的隐私和安全。千里传音项目的志愿者可以協助你安裝，提供代理服务，让你避开监控放心的与朋友聊天，畅通无阻传输信息，也不会有封号问题。使用千里传音免费，也不需要 VPN。</p>
                     </div>
                     <div class="space-20"></div>
-                    <div class="wow fadeInUp" data-wow-delay="0.2s">
+                    <div>
                         <div class="button-line">
                             <div class="button-line-head">安卓：</div>
                             <a href="/file/qianli-android-universal-release-v1.1.apk" target="_blank" class="btn btn-light" style="color: blue;">点击下载</a>
@@ -92,6 +95,57 @@
                 </div>
             </div>
         </header>
+
+        <section class="section-padding" id="aggrement" style="padding: 30px;">
+            <div style="text-align: center;;">
+                <img src="res/qianli-logo.png" style="width: 45px;"/>
+            <div class="space-20"></div>
+            <h5 class="title" style="font-weight: 700;">用户协议</h5>
+            <div class="space-20"></div>
+            </div>
+            <p>本协议约定我方与用户之间关于千里传音(Qianli Chat) App软件服务（以下简称“服务”）的使用条款。用户的注册、登录、使用等行为即表示接受使用协议条款。千里传音可能会不时更新协议条款，您继续使用我们的服务即确认您接受我们更新的协议，并取代任何先前的协议。如果您不同意我们的协议，请立即停止使用我们的服务。</p>
+            <p>一 年龄<br/>
+                您必须年满 18岁才能使用我们的服务。如果您未满 18 岁，您需要取得您的父母或法定监护人同意才能使用我们的服务。</p>
+            <p>二 使用<br/>
+                用户不得利用本App账号在千里传音群组传播以下内容或从事以下活动：
+                <ol>
+                    <li>暴力、淫秽或露骨的性或色情内容。</li>
+                    <li>具有攻击性、辱骂性、诽谤性、威胁性，或鼓吹煽动暴力</li>
+                    <li>骚扰或欺凌其他用户</li>
+                    <li>宣传鼓动危险性的挑战、恶作剧、杀戮或伤害、吸毒、制毒，暴力事件、教学盗窃或作弊、黑客攻击。</li>
+                    <li>示或宣传未成年人参与危险活动或鼓励未成年人进行可能导致伤害的危险活动，包括危险的特技、冒险或恶作剧。对未成年人造成情绪困扰，包括让未成年人接触成人主题、模拟父母虐待、胁迫未成年人。</li>
+                    <li>索取、购买、出售、交易、捐赠、赠送或以其他方式从事非法毒品贩运。</li>
+                    <li>传播任何病毒或恶意内容，如恶意软件、特洛伊木马或病毒，或以其他方式干扰任何用户对服务或内容的访问。</li>
+                    <li>利用技术手段批量建立虚假账号。</li>
+                    <li>恶意干扰网站或应用程序的运行。</li>
+                </ol>
+            </p>
+
+            <p>
+                如果我方发现或收到他人举报或投诉用户违反本协议约定的，我方有权不经通知随时对相关内容，包括发布记录进行审查、删除，并视情节轻重对违规账号处以警告、账号封禁、设备封禁、功能封禁的处罚，且通知用户处理结果。被禁账号未经许可，不能新建账号。
+            </p>
+
+            <p>三 免责声明<br/>
+                您使用我们的服务的风险由您自行承担，并受以下免责声明的约束。
+                我们不对服务、内容和产品做出任何具体承诺或保证。例如，我们对以下方面不作任何保证：（1） 服务上提供的内容和用户内容;（2） 服务的特定功能，或其准确性、可靠性、可用性或满足您需求的能力。我们不作任何明示或暗示的保证，包括但不限于适销性、特定用途的适用性、所有权、不侵权以及不含计算机病毒或其它有害代码的保证。千里传音不保证我们提供的任何信息是准确、完整或有用的，也不保证我们的服务是可操作的、无错误的、安全的，或者我们的服务将在没有中断、延迟或缺陷的情况下运行。我们无法控制用户使用我们服务的方式或时间，也不对此负责。对于我们的用户或其他第三方的行为或信息（包括内容），我们概不负责。您免除我们的任何索赔、投诉、诉因、争议或争议（统称为"索赔"）以及与您针对任何第三方的任何此类索赔有关、由此产生或以任何方式与之相关的已知和未知损害赔偿。
+            </p>
+            
+            <p>四 责任限制<br/>
+除适用法律要求外，在任何情况下，我方均不对 （1） 任何间接、特殊、偶然、惩罚性、惩戒性或后果性损害负责，以及 （2） 因您使用服务或内容而引起或与之相关的任何使用、数据、业务或利润损失，无论是直接的还是直接的， 无论法律理论如何，也无论我们是否被警告或知道此类损害的可能性。由此产生或以任何方式与之相关的总责任将不超过30 美元。
+            </p>
+
+            <p>对于因您访问或使用本服务或下载通过本服务提供的任何内容而对您的计算机设备或其他财产造成的任何损害或可能感染的病毒，我们不承担任何责任。 如果您对本服务不满意，您唯一的补救措施是停止使用本服务。</p>
+
+            <p>五 隐私条款<br/>
+                千里传音不需要任何个人信息注册账号，千里传音采用 Signal 最先进的安全性和端到端加密技术，为用户提供私人消息和互联网通话服务（"服务"）。您的通话和消息始终是加密的，因此除了您自己和预期的收件人之外，任何人都无法共享或查看它们。
+            </p>
+
+            <p>
+                千里传音无法解密或以其他方式访问您的消息或通话内容。千里传音在其服务器上对端到端加密消息进行排队，以便传送到暂时离线的设备（例如电池没电的手机）。您的消息历史记录存储在您自己的设备上。 其他技术信息存储在我们的服务器上，包括随机生成的身份验证令牌、密钥、推送令牌以及建立呼叫和传输消息所需的其它材料。千里传音将这些额外的技术信息限制在运行服务所需的最低限度。
+            </p>
+
+            <p>本协议自2023 年 11 月 18 日起生效</p>
+        </section>
     </div>
     <script src="./res/jquery-1.12.4.min.js"></script>
     <script src="./res/bootstrap.bundle.min.js"></script>
