--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             </button>
             <div class="nav navbar-nav navbar-collapse collapse in" id="navbarNav" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav">
                 <a class="nav-link" href="#home_page">首页</a>
+                <a class="nav-link" href="#guide">安装教程</a>
                 <a class="nav-link" href="#aggrement">用户协议</a>
             </div>
         </nav>
@@ -95,6 +96,22 @@
                 </div>
             </div>
         </header>
+
+        <section class="section-padding" id="guide" style="padding:30px;">
+            <div class="page-title text-center">
+                <img src="res/qianli-logo.png" style="width: 45px;"/>
+                <div class="space-20"></div>
+                <h5 class="title">安装教程</h5>
+            </div>
+            <div class="space-20"></div>
+            <p>如何下载安装：</p>
+            <div class="embed-responsive embed-responsive-1by1" style="max-width: 500px;">
+                <video id="my-video" class="video-js embed-responsive-item" controls preload="metadata" width="200" height="800">
+                    <source src="/file/qianli-guide.mp4" type="video/mp4" />
+                    <p class="vjs-no-js"> 请启用 JavaScript 才能观看 </p>
+                </video>
+            </div>
+        </section>
 
         <section class="section-padding" id="aggrement" style="padding: 30px;">
             <div style="text-align: center;;">
