add source code

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <a class="nav-link" href="#home_page">首页</a>
                 <a class="nav-link" href="#guide">安装教程</a>
                 <a class="nav-link" href="legal.html">用户协议</a>
+                <a class="nav-link" href="https://github.com/qianlichat" target="_blank">源代码</a>
             </div>
         </nav>
 
