--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="page-title text-center">
                 <img src="res/qianli-logo.png" style="width: 45px;"/>
                 <div class="space-20"></div>
-                <h5 class="title">安装教程一：（不使用VPN的情况下）</h5>
+                <h5 class="title">安装教程二：（不使用VPN的情况下）</h5>
             </div>
             <div class="space-20"></div>
             <p>不使用VPN的情况下，如何下载安装：</p>
