update github link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="space-20"></div>
                     <div class="desc wow fadeInUp" data-wow-delay="0.5s">
                         <p>现在是信息时代，网络封锁剥夺人的言论自由和知情权，危及人的安全， 千里传音项目的推出是给网友提供一个不受干扰和监控，自由获取真实信息的即时通讯软体。</p>
-                        <p>千里传音 fork 自目前国际公认在隐私和安全方面顶尖的加密通信软体 Signal Messenger，仅修改了注册流程, 将手机号替换成自定义账号，让用户无需手机号就能注册，杜绝所有安全隐患。项目所有的源代码都公布在[Github]上面，任何人都可以检查代码安全性。</p>
+                        <p>千里传音 fork 自目前国际公认在隐私和安全方面顶尖的加密通信软体 Signal Messenger，仅修改了注册流程, 将手机号替换成自定义账号，让用户无需手机号就能注册，杜绝所有安全隐患。项目所有的源代码都公布在<a href="https://github.com/qianlichat" target="_blank">[Github]</a>上面，任何人都可以检查代码安全性。</p>
                         <p>与 Signal 或 Telegram 相比，千里传音因为无需电话号码注册，完全匿名，更能够保护用户的隐私和安全。千里传音项目的志愿者可以協助你安裝，提供代理服务，让你避开监控放心的与朋友聊天，畅通无阻传输信息，也不会有封号问题。使用千里传音免费，也不需要 VPN。</p>
                     </div>
                     <div class="space-20"></div>
