--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./res/animate.css">
     <link rel="stylesheet" href="./res/style.css">
     <link rel="stylesheet" href="./res/responsive.css">
+    <link rel="canonical" href="https://qianli.chat/">
     <script>
         function windowsDownloadClick(id) {
             var item = document.getElementById(id);
